--- a/src/frontend/app/scss/App.scss
+++ b/src/frontend/app/scss/App.scss
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 @import "./Normalize.scss";
+@import "../common/Variables.scss";
 
 :root {
-  --font-family: "Work Sans", sans-serif;
+  --font-family: "Inter", sans-serif;
   --smooth-scroll: smooth;
   scroll-behavior: var(--smooth-scroll);
 }
@@ -18,6 +19,9 @@ body,
   display: flex;
   justify-content: center;
   font-family: var(--font-family);
+
+  background-color: $site-bg-color;
+  color: $white-color_1;
 }
 
 a {
@@ -35,10 +39,10 @@ a {
   flex-direction: column;
   gap: 0.5rem;
   width: 100%;
+  max-width: 1280px;
 }
 
 .app-content {
   width: 100%;
-  max-width: 1280px;
   margin: 0 auto;
 }
