chore: Update styles for hr and hero component

--- a/src/frontend/app/scss/App.scss
+++ b/src/frontend/app/scss/App.scss
@@ -24,6 +24,12 @@ body,
   color: $white-color_1;
 }
 
+hr {
+  border: 0;
+  height: 1px;
+  background-color: $white-color_2;
+}
+
 a {
   outline: none;
 
