--- a/src/frontend/components/hero/Hero.module.scss
+++ b/src/frontend/components/hero/Hero.module.scss
@@ -3,6 +3,9 @@
 .wrapper {
   position: relative;
   width: 100%;
+
+  border-bottom: 1px solid rgb(63, 63, 63);
+  margin-bottom: 1rem;
 }
 
 .hero_shadow {
