chore: Update Variables.scss with new blue color and border radius

--- a/src/frontend/app/common/Variables.scss
+++ b/src/frontend/app/common/Variables.scss
@@ -10,6 +10,8 @@ $dark-color_0: hsl(0, 0%, 0%);
 $dark-color_1: hsl(0, 0%, 11%);
 $dark-color_2: hsl(0, 0%, 14%);
 
-$blue-color: hsl(209, 92%, 71%);
+$blue-color: hsl(209, 92%, 71%); //#71b7f9
 $blue-color_1: hsl(209, 92%, 61%);
 $blue-color_2: hsl(209, 92%, 51%);
+
+$border-radius: 0.25rem;
