--- a/src/frontend/app/scss/App.scss
+++ b/src/frontend/app/scss/App.scss
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap");
 @import "./Normalize.scss";
 @import "../common/Variables.scss";
 
 :root {
-  --font-family: "Inter", sans-serif;
+  --font-family: "Fira Code", monospace;
   --smooth-scroll: smooth;
   scroll-behavior: var(--smooth-scroll);
 }
@@ -43,9 +43,9 @@ a {
 .app-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
   width: 100%;
   max-width: 1280px;
+  position: relative;
 }
 
 .app-content {
