--- a/src/frontend/components/hero/Navigation.module.scss
+++ b/src/frontend/components/hero/Navigation.module.scss
@@ -1,13 +1,15 @@
 @import "../../app/common/Variables.scss";
 
 .navigation {
-  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: $dark-color_1;
+  width: 100%;
 }
 
-.elements {
+.elements,
+.elements_mobile {
   max-width: calc(1280px - 32px);
   list-style: none;
   margin: 0;
@@ -16,39 +18,127 @@
   display: flex;
   gap: 1rem;
   justify-content: flex-end;
+
+  .link {
+    padding: 0.5rem;
+    display: block;
+    letter-spacing: -0.5px;
+    text-underline-offset: 4px;
+    color: $white-color_1;
+    color: $blue-color;
+    border-radius: 0.2rem;
+    transition:
+      background-color 0.3s,
+      text-decoration 0.3s;
+
+    &:hover {
+      background-color: $blue-color;
+      color: $dark-color_1;
+      text-decoration: none;
+    }
+    &:active {
+      background-color: $blue-color_1;
+      border-color: $blue-color_1;
+      color: $dark-color_1;
+      text-decoration: none;
+      transition: none;
+    }
+  }
 }
 
-.link {
-  border: 2px solid $blue-color;
-  padding: 0.5rem 1rem;
-  display: block;
-  text-decoration: none;
-  letter-spacing: -0.5px;
+.elements_mobile {
+  display: none;
+}
 
-  color: $white-color_1;
+.link_btn {
+  padding: 0.5rem;
+  display: block;
+  letter-spacing: -0.5px;
+  text-decoration: none;
+  color: $dark-color_1;
   border-radius: 0.2rem;
-  transition:
-    background-color 0.3s,
-    color 0.3s;
+  background-color: $blue-color;
+  transition: all 0.2s forwards;
 
   &:hover {
-    background-color: $blue-color;
-    color: $dark-color_1;
+    background-color: $blue-color_1;
   }
   &:active {
-    background-color: $blue-color_1;
-    border-color: $blue-color_1;
-    color: $dark-color_1;
+    background-color: $blue-color_2;
     transition: none;
   }
 }
 
 .home {
-  a {
-    font-size: 1.25rem;
-    font-weight: 500;
-    padding: 0.5rem 1rem;
+  padding: 0.5rem 1rem;
+  .logo {
+    width: 3rem;
+    height: 3rem;
+    border: 0.125rem solid $white-color_1;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     color: $white-color_1;
     text-decoration: none;
+    font-size: 2rem;
+
+    transition:
+      background-color 0.3s,
+      color 0.3s;
+
+    &:hover {
+      background-color: $white-color_1;
+      color: $dark-color_1;
+    }
+  }
+}
+
+.hamburger {
+  background-color: transparent;
+  border: none;
+  display: none;
+  margin-right: 1rem;
+
+  svg {
+    fill: $blue-color;
+  }
+
+  &:hover {
+    svg {
+      fill: $blue-color_1;
+    }
+  }
+  &:active {
+    svg {
+      fill: $blue-color_2;
+    }
+  }
+}
+
+@media (max-width: 1279px) {
+  .elements {
+    display: none;
+  }
+
+  .hamburger {
+    display: block;
+    position: relative;
+    z-index: 1;
+  }
+
+  .elements_mobile {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid $blue-color;
+    padding: 1rem 2rem;
+    right: 1.5rem;
+    top: 4rem;
+    background-color: $dark-color_1;
+    z-index: 1;
+    border-radius: $border-radius;
+    gap: 1rem;
   }
 }
