--- a/src/frontend/components/hero/Hero.module.scss
+++ b/src/frontend/components/hero/Hero.module.scss
@@ -3,6 +3,7 @@
 .wrapper {
   width: 100%;
   position: relative;
+  padding-bottom: 3rem;
   border-bottom: 1px solid rgb(63, 63, 63);
   margin-bottom: 1rem;
 }
@@ -37,14 +38,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 20rem;
+  padding: 1rem;
 
   .inner {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: clamp(1.5rem, 2.5vw, 2rem);
-    font-weight: 900;
+    text-align: center;
+    text-transform: uppercase;
 
     .subtitle {
       margin: 0;
@@ -58,6 +60,4 @@
 }
 
 @media screen and (max-width: 1279px) {
-  .content {
-  }
 }
