chore: Update Variables.scss with new blue color and border radius

--- a/src/frontend/app/common/Variables.scss
+++ b/src/frontend/app/common/Variables.scss
@@ -14,4 +14,5 @@ $blue-color: hsl(209, 92%, 71%); //#71b7f9
 $blue-color_1: hsl(209, 92%, 61%);
 $blue-color_2: hsl(209, 92%, 51%);
 
+$border-color: hsl(0, 0%, 25%); //#404040
 $border-radius: 0.25rem;
