--- a/src/frontend/components/hero/Hero.module.scss
+++ b/src/frontend/components/hero/Hero.module.scss
@@ -3,9 +3,6 @@
 .wrapper {
   width: 100%;
   position: relative;
-  padding-bottom: 3rem;
-  border-bottom: 1px solid rgb(63, 63, 63);
-  margin-bottom: 1rem;
 }
 
 .hero_shadow {
@@ -38,7 +35,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem;
+  padding: 3rem 1rem;
+
+  h1 {
+    margin: 0;
+  }
 
   .inner {
     display: flex;
