chore: Update padding in App.scss and Home.module.scss

--- a/src/frontend/app/scss/App.scss
+++ b/src/frontend/app/scss/App.scss
@@ -46,7 +46,7 @@ a {
   max-width: calc(1280px - 2rem);
   width: 100%;
   position: relative;
-  padding: 1rem 0;
+  padding: 0 1rem;
 }
 
 .app-content {
